[gd_scene load_steps=15 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/characternogun.png" type="Texture" id=2]
[ext_resource path="res://player/bullet.png" type="Texture" id=3]
[ext_resource path="res://player/Bullet.wav" type="AudioStream" id=4]
[ext_resource path="res://player/Chads_GAT.png" type="Texture" id=5]
[ext_resource path="res://audio/sound_jump.wav" type="AudioStream" id=9]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.708353, 0.72498, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 65.84
gravity = Vector3( 0, -15, 0 )
initial_velocity = 10.14
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 14.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 969
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5

[node name="ArmPivot" type="Position2D" parent="Sprite"]
position = Vector2( 4, 3.5 )
rotation = 0.00698132

[node name="GunArm" type="Sprite" parent="Sprite/ArmPivot"]
show_behind_parent = true
position = Vector2( 10, -3.5 )
z_index = -1
texture = ExtResource( 5 )

[node name="BulletShoot" type="Position2D" parent="Sprite/ArmPivot/GunArm"]
position = Vector2( 9, 0 )

[node name="Smoke" type="Particles2D" parent="Sprite/ArmPivot/GunArm"]
self_modulate = Color( 1, 1, 1, 0.26702 )
position = Vector2( 9, 0 )
rotation = -1.45648
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/falling = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/run = SubResource( 7 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 8 )

[node name="SoundShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="SoundJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16.01 )

[node name="ShotDelayTimer" type="Timer" parent="."]
one_shot = true
